[package]
name = "lib_sens"
version = "0.1.0"
authors = ["buckn <nathanieljbuck7@gmail.com>"]
edition = "2018"
description = "A Rust crate that converts sensitivities between video games and synchronizes them to configuration files."
repository = "https://github.com/buckn/lib_sens"
license = "Apache License 2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"